--- a/stories/pitch/event-driven-solution.yaml
+++ b/stories/pitch/event-driven-solution.yaml
@@ -3,6 +3,11 @@ title: Event-Driven Architecture
 description: Bounded Contexts communicating through events
 version: "1.0"
 actors: []
+
+camera:
+  center: [0, 0]
+  zoom: 1
+
 nodes:
   - id: ed-bc
     type: system
@@ -17,6 +22,7 @@ nodes:
         params:
           scale: 1.08
           color: "#3b82f6"
+
   - id: routing-bc
     type: system
     label: Routing BC
@@ -30,6 +36,7 @@ nodes:
         params:
           scale: 1.08
           color: "#8b5cf6"
+
   - id: trip-bc
     type: system
     label: Trip BC
@@ -43,6 +50,7 @@ nodes:
         params:
           scale: 1.08
           color: "#06b6d4"
+
   - id: event-bus
     type: event
     label: Azure Service Bus
@@ -57,6 +65,7 @@ nodes:
           color: "#22c55e"
           intensity: 0.4
           size: 30
+
   - id: decoupled
     type: state
     label: Decoupled
@@ -68,11 +77,10 @@ nodes:
       - type: emoji-explosion
         trigger: on-reveal
         params:
-          emojis:
-            - ✅
-            - 🔗
+          emojis: ["✅", "🔗"]
           count: 8
           duration: 1200
+
   - id: scalable
     type: state
     label: Scalable
@@ -84,11 +92,10 @@ nodes:
       - type: emoji-explosion
         trigger: on-reveal
         params:
-          emojis:
-            - 📈
-            - ⚡
+          emojis: ["📈", "⚡"]
           count: 8
           duration: 1200
+
   - id: velocity-up
     type: state
     label: Velocity ↑
@@ -100,81 +107,89 @@ nodes:
       - type: emoji-explosion
         trigger: on-reveal
         params:
-          emojis:
-            - 🚀
-            - 💨
-            - ⭐
+          emojis: ["🚀", "💨", "⭐"]
           count: 15
           duration: 1500
+
 edges:
   - id: e1
     source: ed-bc
     target: event-bus
     type: event
     label: publishes
+
   - id: e2
     source: routing-bc
     target: event-bus
     type: event
     label: publishes
+
   - id: e3
     source: trip-bc
     target: event-bus
     type: event
     label: subscribes
+
   - id: e4
     source: event-bus
     target: decoupled
     type: flow
+
   - id: e5
     source: event-bus
     target: scalable
     type: flow
+
   - id: e6
     source: event-bus
     target: velocity-up
     type: flow
+
 steps:
   - id: step-1
-    title: Bounded Contexts
-    nodeIds:
-      - ed-bc
-      - routing-bc
-      - trip-bc
+    title: Enrollment & Demand
+    nodeIds: [ed-bc]
     edgeIds: []
-    narrative: Each bounded context owns its domain completely.
+    narrative: Start with the E&D bounded context - owning its domain completely.
+
   - id: step-2
-    title: Event-Driven Communication
-    nodeIds:
-      - ed-bc
-      - routing-bc
-      - trip-bc
-      - event-bus
-    edgeIds:
-      - e1
-      - e2
-      - e3
-    narrative: Services communicate through domain events on Azure Service Bus.
+    title: Route Optimization
+    nodeIds: [ed-bc, routing-bc]
+    edgeIds: []
+    narrative: Add the Routing BC - independent, focused on route optimization.
+
   - id: step-3
-    title: The Benefits
-    nodeIds:
-      - ed-bc
-      - routing-bc
-      - trip-bc
-      - event-bus
-      - decoupled
-      - scalable
-      - velocity-up
-    edgeIds:
-      - e1
-      - e2
-      - e3
-      - e4
-      - e5
-      - e6
-    narrative: "Result: decoupled, scalable architecture with increased velocity!"
-camera:
-  center:
-    - 0
-    - 0
-  zoom: 1
+    title: Trip Management
+    nodeIds: [ed-bc, routing-bc, trip-bc]
+    edgeIds: []
+    narrative: And the Trip BC - managing the full trip lifecycle.
+
+  - id: step-4
+    title: The Event Bus
+    nodeIds: [ed-bc, routing-bc, trip-bc, event-bus]
+    edgeIds: [e1, e2]
+    narrative: Bounded contexts publish domain events to Azure Service Bus.
+
+  - id: step-5
+    title: Subscribe to Events
+    nodeIds: [ed-bc, routing-bc, trip-bc, event-bus]
+    edgeIds: [e1, e2, e3]
+    narrative: Other services subscribe to events they care about. No direct coupling.
+
+  - id: step-6
+    title: Decoupled
+    nodeIds: [ed-bc, routing-bc, trip-bc, event-bus, decoupled]
+    edgeIds: [e1, e2, e3, e4]
+    narrative: Services are fully decoupled - change one without touching others.
+
+  - id: step-7
+    title: Scalable
+    nodeIds: [ed-bc, routing-bc, trip-bc, event-bus, decoupled, scalable]
+    edgeIds: [e1, e2, e3, e4, e5]
+    narrative: Scale each service independently based on demand.
+
+  - id: step-8
+    title: Velocity Up!
+    nodeIds: [ed-bc, routing-bc, trip-bc, event-bus, decoupled, scalable, velocity-up]
+    edgeIds: [e1, e2, e3, e4, e5, e6]
+    narrative: "Result: teams move fast, ship independently, velocity goes up!"
