--- a/stories/pitch/event-driven-solution.yaml
+++ b/stories/pitch/event-driven-solution.yaml
@@ -9,13 +9,13 @@ camera:
   zoom: 1
 
 nodes:
+  # Top row: Bounded Contexts
   - id: ed-bc
     type: system
     label: E&D BC
     description: Enrollment & Demand
-    position:
-      x: -250
-      y: -146
+    size: l
+    position: { x: -250, y: -120 }
     effects:
       - type: pulse
         trigger: on-focus
@@ -27,9 +27,8 @@ nodes:
     type: system
     label: Routing BC
     description: Route Optimization
-    position:
-      x: 0
-      y: -146
+    size: l
+    position: { x: 0, y: -120 }
     effects:
       - type: pulse
         trigger: on-focus
@@ -41,9 +40,8 @@ nodes:
     type: system
     label: Trip BC
     description: Trip Management
-    position:
-      x: 250
-      y: -146
+    size: l
+    position: { x: 250, y: -120 }
     effects:
       - type: pulse
         trigger: on-focus
@@ -51,13 +49,13 @@ nodes:
           scale: 1.08
           color: "#06b6d4"
 
+  # Middle: Event Bus
   - id: event-bus
     type: event
     label: Azure Service Bus
     description: Domain Events
-    position:
-      x: 0
-      y: 34
+    size: l
+    position: { x: 0, y: 0 }
     effects:
       - type: glow
         trigger: continuous
@@ -66,13 +64,13 @@ nodes:
           intensity: 0.4
           size: 30
 
+  # Bottom row: Benefits
   - id: decoupled
     type: state
     label: Decoupled
     variant: success
-    position:
-      x: -250
-      y: 134
+    size: s
+    position: { x: -250, y: 120 }
     effects:
       - type: emoji-explosion
         trigger: on-reveal
@@ -85,9 +83,8 @@ nodes:
     type: state
     label: Scalable
     variant: success
-    position:
-      x: 0
-      y: 134
+    size: s
+    position: { x: 0, y: 120 }
     effects:
       - type: emoji-explosion
         trigger: on-reveal
@@ -100,9 +97,8 @@ nodes:
     type: state
     label: Velocity ↑
     variant: success
-    position:
-      x: 250
-      y: 134
+    size: m
+    position: { x: 250, y: 120 }
     effects:
       - type: emoji-explosion
         trigger: on-reveal
@@ -112,38 +108,52 @@ nodes:
           duration: 1500
 
 edges:
+  # BCs publish to event bus (downward)
   - id: e1
     source: ed-bc
     target: event-bus
     type: event
     label: publishes
+    sourceAnchor: bottom
+    targetAnchor: left
 
   - id: e2
     source: routing-bc
     target: event-bus
     type: event
     label: publishes
+    sourceAnchor: bottom
+    targetAnchor: top
 
   - id: e3
     source: trip-bc
     target: event-bus
     type: event
     label: subscribes
+    sourceAnchor: bottom
+    targetAnchor: right
 
+  # Event bus to benefits (downward)
   - id: e4
     source: event-bus
     target: decoupled
     type: flow
+    sourceAnchor: left
+    targetAnchor: top
 
   - id: e5
     source: event-bus
     target: scalable
     type: flow
+    sourceAnchor: bottom
+    targetAnchor: top
 
   - id: e6
     source: event-bus
     target: velocity-up
     type: flow
+    sourceAnchor: right
+    targetAnchor: top
 
 steps:
   - id: step-1
